<resources>
    <string name="main_msg_title">Device Info</string>
    <string name="main_msg_ram">RAM used</string>
    <string name="main_msg_sd">Storage left</string>
    <string name="main_msg_cpu" translatable="false">CPU</string>
    <string name="main_msg_more">More device info</string>
    <string name="main_guard_title">optimizes your phone for</string>
    <string name="main_guard_unit">day(s)</string>
    <string name="main_arc_sd">Storage</string>
    <string name="main_arc_cpu">CPU</string>
    <string name="main_arc_ram">RAM</string>
    <string name="message_title_1">Android Version:</string>
    <string name="message_start">Basic Info</string>
    <string name="message_boot_time">Recent power on:</string>
    <string name="message_boot_time2">Running time:</string>
    <string name="message_hard">Hardware feature:</string>
    <string name="message_isRoot">Root:</string>
    <string name="message_root">Okay</string>
    <string name="message_not_root">No</string>
    <string name="message_fenbianlv">Resolution:</string>
    <string name="message_q_camera">Front-facing camera:</string>
    <string name="message_h_camera">Camera:</string>
    <string name="message_imei">IMEI:</string>
    <string name="message_ram">RAM:</string>
    <string name="message_sd">SD Usage:</string>
    <string name="message_pix">Million pixel</string>
    <string name="manager_sort_size">Size</string>
    <string name="manager_sort_time">Time</string>
    <string name="manager_sort_pinlv">Frequency</string>
    <string name="manager_button">Uninstall</string>
    <string name="success_cleaned">Cleaned</string>
    <string name="success_normal">No junk</string>
    <string name="success_title">Successfully cleaned</string>
    <string name="main_back_pressed">Press again to exit</string>
    <string name="junk_title_clean">Clean</string>
    <string name="junk_title_scaning">Scanning:</string>
    <string name="junk_system">System Cache</string>
    <string name="junk_apk">Obsolete Apk</string>
    <string name="junk_unload">Clear Cache</string>
    <string name="junk_log">App Junks</string>
    <string name="junk_user">App Cache</string>
    <string name="junk_ram">RAM Boost</string>
    <string name="junk_predict">Suggested</string>
    <string name="junk_button">Clean</string>
    <string name="side_charging">Smart Charging</string>
    <string name="side_float">Widget Boost</string>
    <string name="side_junk">Junk Clean</string>
    <string name="side_ram">RAM Booster</string>
    <string name="side_manager">App Manager</string>
    <string name="side_theme">Theme</string>
    <string name="side_setting">Setting</string>
    <string name="side_rotate">Rate</string>
    <string name="ram_title_clean">RAM used</string>
    <string name="ram_button">Free RAM</string>
    <string name="toast_ing">Cleaning</string>
    <string name="junk_ram_title_clean">One-tap Clean</string>
    <string name="float_h_1">Close background app</string>
    <string name="float_jiasu">Speed up</string>
    <string name="float_yijiasu">Done</string>
    <string name="float_wifi">Wifi</string>
    <string name="float_liuliang">Data</string>
    <string name="float_liangdu">Brightness</string>
    <string name="float_shengyin">Sound</string>
    <string name="float_gps">GPS</string>
    <string name="setting_name">Setting</string>
    <string name="setting_kaiguanllei">Switches</string>
    <string name="setting_gongneng">Function</string>
    <string name="setting_tongzhi">Notification</string>
    <string name="setting_tongzhilan">Notification Shortcut</string>
    <string name="setting_float">Boost Widget</string>
    <string name="setting_white">Whitelist</string>
    <string name="setting_battery">Smart Charging</string>
    <string name="setting_rotate">Rate</string>
    <string name="white_list_name">Whitelist</string>
    <string name="white_list_add_name">Add to whitelist</string>
    <string name="white_list_tishi">Process won\'t be killed</string>
    <string name="white_list_jiaru">Add to whitelist</string>
    <string name="white_list_yichu">Remove whitelist</string>
    <string name="edit_hint">Input</string>
    <string name="white_wu">Whitelist apps won\'t be scanned</string>
    <string name="unload_canyu">Obsolete apk</string>
    <string name="quxiao">Cancel</string>
    <string name="qingli">Clean</string>
    <string name="notification_1">Current storage used</string>
    <string name="notification_button">Clean</string>
    <string name="notification_2">Junk file</string>
    <string name="loading_tiaoguo">Skip</string>
    <string name="loading_1" translatable="false">Best Android Optimizer</string>
    <string name="loading_2" translatable="false">Best Android Optimizer</string>
    <string name="loading_3" translatable="false">Super Power Cleaner &amp; Speed Booster</string>
    <string name="short_cut">Boost</string>
    <string name="short_shifang">Free RAM</string>
    <string name="cooling_succ">Cooled down</string>
    <string name="battery_0">Screen Charging</string>
    <string name="battery_1">Screen Charging</string>
    <string name="premiss_1">Authorize Permission</string>
    <string name="premiss_2">Please allow permission to get detailed data</string>
    <string name="premiss_3">Okay</string>
    <string name="premiss_4">Cancel</string>
    <string name="premiss_5">Go</string>
    <string name="permiss_6">Deep Clean</string>
    <string name="permiss_7">Please allow the device to access permission for better clean junks</string>
    <string name="side_family" translatable="false">My Family</string>
    <string name="notifi_jiasu">Speed</string>
    <string name="notifi_wendu">CPU</string>
    <string name="notifi_flash">Flashlight</string>
    <string name="notifi_clean">Clean</string>
    <string name="notifi_ram">RAM usage over</string>
    <string name="notifi_cooling">CPU Temp over</string>
    <string name="notifi_junk">Junk files over</string>
    <string name="notifi_ram_msg">Boost</string>
    <string name="notifi_cooling_msg">Cool Down</string>
    <string name="notifi_junk_msg">Clean</string>
    <string name="notifi_jiangwen">Cool Down</string>
    <string name="widget_ram">RAM used</string>
    <string name="applock_1">1.Lock installed apps</string>
    <string name="applock_2">2.Change AppLock icon</string>
    <string name="applock_3">3.Take intruder\'s photo</string>
    <string name="applock_4">4.Time Lock &amp; WiFi Lock</string>
    <string name="applock_5">5.Beautiful themes</string>
    <string name="applock_6">Safest &amp; Fatest AppLock Pro</string>
    <string name="applock_7">Enable AppLock Pro</string>
    <string name="applock_8">Enable AppLock</string>
    <string name="applock_9">AppLock</string>
    <string name="jiasu_success">Successfully Boost</string>
    <string name="power_1">%1$s app</string>
    <string name="power_2">will restart</string>
    <string name="power_3">Deep clean to free more memory</string>
    <string name="power_4">will restart, please deep clean to optimize phone</string>
    <string name="side_power">Deep Clean</string>
    <string name="setting_unload">Residual</string>
    <string name="setting_short">One-tap Clean</string>
    <string name="notifi_info_1">Close unnecessary messages, notification bar will be clear</string>
    <string name="notifi_info_2">GO</string>
    <string name="side_notifi">Notification Cleaner</string>
    <string name="notifi_nor">All junk notifications have been cleaned</string>
    <string name="notifi">Notification</string>
    <string name="notifi_button">Clean All</string>
    <string name="notifi_clean_success">%1$s notification is cleaned</string>
    <string name="notifi_msg_main">Clean mess notification，make phone clear </string>
    <string name="file_apk">APK</string>
    <string name="file_zip">ZIP</string>
    <string name="file_txt">Document</string>
    <string name="file_music">Music</string>
    <string name="file_video">Video</string>
    <string name="file_pther">Others</string>
    <string name="side_file">File</string>
    <string name="file_num">%1$s items</string>
    <string name="delete">Please choose files you want to delete</string>
    <string name="delete_queren">OK</string>
    <string name="delete_2">You want delete %1$s files?</string>
    <string name="notifi_two_day">You haven\'t cleaned phone for 2 days</string>
    <string name="notifi_two_day_2">Clean</string>
    <string name="file_main">Delete useless files</string>
    <string name="picture_scan">Scanning...</string>
    <string name="picture_jianyi">Suggest to clean</string>
    <string name="picture_button">Delete all</string>
    <string name="side_picture">Similar photos</string>
    <string name="picture_1">Delete this %1$s photo?</string>
    <string name="picture_2">Note:This photo can be checked in Recycle Bin, and it will be automatically deleted after 7 days.</string>
    <string name="picture_3">No similar photos was scanned</string>
    <string name="picture_4">Scan other junk</string>
    <string name="picture_5">Photos show the days remianing before deletion. After that time, photos will be permanently deleted</string>
    <string name="picture_6">Recover photo</string>
    <string name="picture_7">Delete photo</string>
    <string name="picture_8">No photos to recover</string>
    <string name="picture_9">Select all</string>
    <string name="picture_10">Photo Recycler</string>
    <string name="picture_11">day</string>
    <string name="picture_12">Delete %1$s photo permanently?</string>
    <string name="picture_13">Select</string>
    <string name="picture_14">Delete</string>
    <string name="picture_15">Recover %1$s photo?</string>
    <string name="picture_16">Okay</string>
    <string name="picture_delete">Delete similar photos</string>
    <string name="file_null">No file</string>
    <string name="gboost_0">Game Booster</string>
    <string name="gboost_1">Game list</string>
    <string name="gboost_2">Current state</string>
    <string name="gboost_3">CPU usage</string>
    <string name="gboost_4">Storage</string>
    <string name="gboost_5">Net Speed</string>
    <string name="gboost_6">Open deep clean to boost game speed 30%</string>
    <string name="gboost_7">Add game</string>
    <string name="gboost_8">Boost success</string>
    <string name="gboost_9">Check</string>
    <string name="gboost_10">Boost game speed by 30%</string>
    <string name="gboost_11">Boosting</string>
    <string name="gboost_12">Add</string>
    <string name="tap_deep">%1$s apps are auto running. Enable deep clean?</string>
    <string name="notifi_1">Close useless notifications</string>
    <string name="notifi_2">Make notification bar simpler</string>
    <string name="success_1">Keep optimizing phone</string>
    <string name="success_2">%1$s junks cleaned</string>
    <string name="success_3">%1$s RAM freed</string>
    <string name="success_4">%1$s duplicate photos cleaned</string>
    <string name="success_5">Cooled down temp. %1$s</string>
    <string name="success_6"> %1$s notifications cleaned</string>
    <string name="success_7"> %1$s file(s) are cleaned</string>
    <string name="success_8">Clean useless junks </string>
    <string name="battery_2">What\'s New</string>
    <string name="battery_3">Smart Charging</string>
    <string name="battery_4">Auto-clean battery draining apps</string>
    <string name="battery_5">Show charging status</string>
    <string name="battery_6">Remind when fully charged</string>
    <string name="battery_7">Enable</string>
    <string name="battery_8">This function contains ads</string>
    <string name="app_name" translatable="false">Boost Cleaner</string>
    <string name="battery_9">New Features:</string>
    <string name="power_promiss_1">Authorize Accessibility Service permission, to stop power draining and auto start apps.</string>
    <string name="power_promiss_2">Stop Auto-Start Apps</string>
</resources>