<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d14"
            android:text="@string/battery_3"
            android:textColor="@color/A6"
            android:textSize="@dimen/s16" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d10"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/battery_shandian" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/d5"
                android:text="@string/battery_4"
                android:textColor="@color/B2"
                android:textSize="@dimen/s16" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d6"
            android:text="@string/battery_5"
            android:textColor="@color/B3"
            android:textSize="@dimen/s14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d6"
            android:text="@string/battery_6"
            android:textColor="@color/B3"
            android:textSize="@dimen/s14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d27"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/battery_cancel"
                android:layout_width="@dimen/d125"
                android:layout_height="@dimen/d36"
                android:background="@drawable/shape_rotate_bad"
                android:gravity="center"
                android:text="@string/battery_7"
                android:textColor="@color/B3"
                android:textSize="@dimen/s13" />

            <TextView
                android:id="@+id/battery_ok"
                android:layout_width="@dimen/d125"
                android:layout_height="@dimen/d36"
                android:background="@drawable/shape_rotate_good"
                android:gravity="center"
                android:text="@string/battery_8"
                android:textColor="@color/A8"
                android:textSize="@dimen/s13" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d10"
            android:layout_marginTop="@dimen/d4"
            android:text="@string/battery_9"
            android:textColor="@color/B8"
            android:textSize="@dimen/s10" />

    </LinearLayout>

</LinearLayout>