<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_battery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_50"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/A1"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/d16"
                android:text="@string/app_name"
                android:textColor="@color/A8"
                android:textSize="@dimen/s18" />

            <ImageView
                android:id="@+id/battery_cha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/d16"
                android:src="@mipmap/battery_cha" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/battery_2"
            android:textColor="@color/A8"
            android:textSize="@dimen/s20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/d9"
            android:src="@mipmap/battery_2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/d17"
            android:text="@string/battery_6"
            android:textColor="@color/A8"
            android:textSize="@dimen/s15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d26"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/d27"
                android:layout_height="@dimen/d27"
                android:layout_marginLeft="@dimen/d33"
                android:background="@drawable/shape_ffffff_round"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/A1"
                android:textSize="@dimen/s16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d14"
                android:text="@string/battery_3"
                android:textColor="@color/A8"
                android:textSize="@dimen/s15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/d27"
                android:layout_height="@dimen/d27"
                android:layout_marginLeft="@dimen/d33"
                android:background="@drawable/shape_ffffff_round"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/A1"
                android:textSize="@dimen/s15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d14"
                android:text="@string/battery_4"
                android:textColor="@color/A8"
                android:textSize="@dimen/s15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/d27"
                android:layout_height="@dimen/d27"
                android:layout_marginLeft="@dimen/d33"
                android:background="@drawable/shape_ffffff_round"
                android:gravity="center"
                android:text="3"
                android:textColor="@color/A1"
                android:textSize="@dimen/s15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d14"
                android:text="@string/battery_5"
                android:textColor="@color/A8"
                android:textSize="@dimen/s15" />

        </LinearLayout>

        <Button
            android:id="@+id/battery_button"
            android:layout_width="@dimen/d288"
            android:layout_height="@dimen/d56"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/d26"
            android:background="@drawable/shape_ad"
            android:text="@string/battery_7"
            android:textColor="@color/A1"
            android:textSize="@dimen/s21" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/d13"
            android:layout_marginTop="@dimen/d4"
            android:text="@string/battery_8"
            android:textColor="@color/white_50"
            android:textSize="@dimen/s14" />
    </LinearLayout>
</FrameLayout>