<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_50"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/d280"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_ad"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/d6"
            android:layout_marginTop="@dimen/d6"
            android:src="@mipmap/eidt_cha" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d24"
            android:text="@string/power_promiss_1"
            android:textColor="@color/A8"
            android:textSize="@dimen/s15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d24"
            android:layout_marginRight="@dimen/d24"
            android:layout_marginTop="@dimen/d20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/d48"
                android:layout_height="@dimen/d48"
                android:src="@mipmap/icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d12"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/A8"
                android:textSize="@dimen/s15" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/side_check_passed" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d24"
            android:layout_marginRight="@dimen/d24"
            android:layout_marginTop="@dimen/d18"
            android:text="@string/power_promiss_2"
            android:textColor="@color/A8"
            android:textSize="@dimen/s14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d16"
            android:layout_marginTop="@dimen/d20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/d112"
                android:layout_height="@dimen/d36"
                android:gravity="center"
                android:text="@string/premiss_4"
                android:textColor="@color/A9"
                android:textSize="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="@dimen/d112"
                android:layout_height="@dimen/d36"
                android:layout_marginLeft="@dimen/d12"
                android:background="@drawable/shape_a1_r"
                android:gravity="center"
                android:text="@string/premiss_3"
                android:textColor="@color/white_100"
                android:textSize="@dimen/activity_horizontal_margin" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>