<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_50"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_radio"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <com.my.bruder.charge.saver.view.CustomerTypefaceMyTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d24"
                android:maxLength="20"
                android:text="@string/delete_queren"
                android:textColor="#444444"
                android:textSize="@dimen/s16" />
        </LinearLayout>

        <com.my.bruder.charge.saver.view.CustomerTypefaceMyTextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/d24"
            android:layout_marginRight="@dimen/d24"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/delete_2"
            android:textColor="@color/A2"
            android:textSize="@dimen/s14" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d16"
            android:layout_marginTop="@dimen/d27"
            android:orientation="horizontal">

            <com.my.bruder.charge.saver.view.CustomerTypefaceMyTextView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/d24"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/d5"
                android:text="@string/premiss_3"
                android:textColor="@color/A1"
                android:textSize="@dimen/s16" />

            <com.my.bruder.charge.saver.view.CustomerTypefaceMyTextView
                android:id="@+id/cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d30"
                android:layout_toLeftOf="@id/ok"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/d5"
                android:text="@string/premiss_4"
                android:textColor="@color/A2"
                android:textSize="@dimen/s16" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>