<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_radio_ffffff"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="@dimen/d72"
        android:layout_height="@dimen/d65"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/chongdian"
            android:layout_width="@dimen/d40"
            android:layout_height="@dimen/d40"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@mipmap/gboost_main" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/electricity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gboost_0"
                android:textColor="@color/A9"
                android:textSize="@dimen/s15" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/gboost_8"
            android:textColor="@color/A9"
            android:textSize="@dimen/s12" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_jiasu"
        android:layout_width="@dimen/d65"
        android:layout_height="@dimen/d27"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape__a4_r"
        android:gravity="center"
        android:text="@string/gboost_9"
        android:textColor="@color/white_100"
        android:textSize="@dimen/s12" />

</LinearLayout>
