<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_70"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="@dimen/d72"
        android:layout_height="@dimen/d65"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/chongdian"
            android:layout_width="@dimen/d40"
            android:layout_height="@dimen/d40"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/icon" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/electricity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/notifi_two_day"
                android:textColor="@color/white_100"
                android:textSize="@dimen/s15" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d5"
            android:text="@string/notifi_two_day_2"
            android:textColor="@color/A7"
            android:textSize="@dimen/s13" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_jiasu"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/d26"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/d16"
        android:background="@drawable/shape__a4_round"
        android:gravity="center"
        android:paddingLeft="@dimen/d10"
        android:paddingRight="@dimen/d10"
        android:text="@string/notification_button"
        android:textColor="@color/white_100"
        android:textSize="@dimen/s12" />

</LinearLayout>
